--- a/config-data/user-service.yaml
+++ b/config-data/user-service.yaml
@@ -3,8 +3,8 @@ server:
 eureka:
   client:
     fetch-registry: true
-    register-with-eureka: false
+    register-with-eureka: true
     service-url:
-      default-zone: http://localhost:8761/eureka
+      default-zone: http://localhost:8761/eureka/
     instance:
       hostname: localhost
